Migrate from local files to cache backed by blob storage.